#24 update : stop icon

--- a/core/designsystem/src/main/res/drawable/stop_record_icon.xml
+++ b/core/designsystem/src/main/res/drawable/stop_record_icon.xml
@@ -1,4 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="48"
-    android:viewportWidth="48" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#000000" android:pathData="M0,0H48V48H0V0Z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="16dp"
+    android:height="17dp"
+    android:viewportWidth="16"
+    android:viewportHeight="17">
+  <path
+      android:pathData="M15.445,0.225V16.775H0.545V0.225H15.445Z"
+      android:fillColor="#EA6E65"/>
 </vector>
