--- a/core/designsystem/src/main/res/drawable/email_icon.xml
+++ b/core/designsystem/src/main/res/drawable/email_icon.xml
@@ -7,7 +7,7 @@
     <clip-path
         android:pathData="M0,0h24v24h-24z"/>
     <path
-        android:pathData="M20,4H4C2.9,4 2.01,4.9 2.01,6L2,18C2,19.1 2.9,20 4,20H20C21.1,20 22,19.1 22,18V6C22,4.9 21.1,4 20,4ZM20,8L12,13L4,8V6L12,11L20,6V8Z"
+        android:pathData="M22,6C22,4.9 21.1,4 20,4H4C2.9,4 2,4.9 2,6V18C2,19.1 2.9,20 4,20H20C21.1,20 22,19.1 22,18V6ZM20,6L12,11L4,6H20ZM20,18H4V8L12,13L20,8V18Z"
         android:fillColor="#000000"/>
   </group>
 </vector>
